5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1712_2505.log
== TEST (2019-05-13 18:14:38) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
while w < k:
    x = x + (x^n)/(factorial(n))

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:15:42) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
while w < k:
    x = x + (x^n)/(factorial(n))

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:20:39) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
while w < k:
    x = x + (x^n)/(factorial(n))

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:52:53) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:53:10) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:54:09) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:54:34) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:54:42) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:59:00) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- EXECUTION TIME:
0.162908
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2505/main.py", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:22:36) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:56:32) 
-- CODE:
from math import* factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
File "XXXX", line 1
    from math import* factorial
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:56:38) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:58:24) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:00:32) 
-- CODE:
from math import factorial
x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = radians(eval(input("")))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:01:02) 
-- CODE:
from math import* factorial
x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
File "XXXX", line 1
    from math import* factorial
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:01:10) 
-- CODE:
from math import* 
factorial
x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- OUTPUT:
0.0274121336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:01:28) 
-- CODE:
from math import* 
factorial
x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- OUTPUT:
0.0274121336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:01:37) 
-- CODE:
from math import* 
factorial
x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- EXECUTION TIME:
0.127495
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.0274121336
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.0274121336
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.0182760276
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:01:42) 
-- CODE:
from math import* 
factorial
x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- OUTPUT:
0.0274121336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:02:16) 
-- CODE:
from math import* 
factorial
x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- OUTPUT:
0.0274121336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:03:35) 
-- CODE:
from math import* 
factorial
x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- OUTPUT:
0.0274121336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:09:42) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- EXECUTION TIME:
0.175822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2505/main.py", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:09:44) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:38:45) 
-- CODE:
from math import*
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- OUTPUT:
0.9303519698
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:39:02) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:42:18) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:42:36) 
-- CODE:
from math import* factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
File "XXXX", line 1
    from math import* factorial
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:42:45) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:42:55) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:43:14) 
-- CODE:
from math import* 
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)
-- OUTPUT:
0.9303519698
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:31:44) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

i = 0
soma = 0 

while (i<k):
	conta = x**((2*i)+1) / factorial(2*i+1)
	x = -1 * x
	soma = soma + conta
	i = i + 1 
print(round(soma, 10))
-- EXECUTION TIME:
0.211495
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
